# ai-engineer-training

./: .gitignore  README.md
week01/: .env.example  README.md  pyproject.toml  requirements.txt
week01/code/: 01-env.md  02-openaiAPI.py  03-HTTP_POST.py  04-2ToolCalls.py  04-chat.py  05-2langgraph.py  05-langchain.py  06-llamaindex.py  08-MultiAgent.py  aa.py  demo_medical_intent.py  interactive_test.py  medical_config.json  medical_intent_recognition.py  test_04_chat.py
week01/docs/: llamaindex 的索引过程.txt  项目管理工具介绍.txt
week02/: README.md  p16_tokenizers.py  p26_自我意识.sh  pyproject.toml
week02/local_ft/: README_SIMPLE.md  server.py  (+3 more)
week03/: README.md  jupyter_lab_config.py  pyproject.toml
week03-homework/: .env.example  README.md  pyproject.toml
week03-homework-2/: README.md  pyproject.toml
week03-homework/chunking_research/: main.py  queries.json  report.md
week03-homework/chunking_research/docs/: 鬼吹灯之精绝古城 第一章 白纸人和鼠友.txt  鬼吹灯之精绝古城 第三章 大山里的古墓.txt  鬼吹灯之精绝古城 第二章 十六字阴阳风水秘术.txt  鬼吹灯之精绝古城 第五章 火瓢虫.txt  鬼吹灯之精绝古城 第六章 九层妖楼.txt  鬼吹灯之精绝古城 第四章 昆仑不冻泉.txt
week03-homework/chunking_research/results/: results.jsonl  summary.csv
week03-homework/ocr_research/: image_ocr_reader.py  main.py  report.md
week03-local-rag/: README.md  chat.py  create_kb.py  main.py  requirements.txt  upload_file.py
week03-qanything/: RAG系统复杂性必要性分析.md  docker-compose-win.yaml  requirements.txt  混合检索实现原理详解.md  重排序两层过滤策略详解.md
week03/code/: .env.example  P12-提示词模板.ipynb  P32-ragas.py  P33-ragas检索召回.py  P35-SQLdemo.ipynb  P35-es混合检索的典型demo.ipynb  graphrag_demo.py  graphrag_no_embedding.py  p17-LlamaIndex初步.ipynb  p18-logging.py  p22-node.ipynb  p23如何增加自己的loader.ipynb  p27-切片.ipynb  p29-向量.ipynb  p32-后处理器.py  p33-提示词模版.ipynb  p34.ipynb  ragas_custom.py  simple_ragas_test.py  test_graphrag.py
week03/code/data/: 公司员工休假福利管理制度.txt
week04/: HITL.ipynb  README.md  mem.ipynb  p13-自定义输出解释器.ipynb  p14-链的解析.ipynb  p17-rule_based_intent_recognition_commented.py  p17-基于规则的方法.ipynb  p24-LLMRouterChain.ipynb  p30-mem0.ipynb  p35-ReACT.ipynb  p36-tool.ipynb  p42-langgraph-0RAG.ipynb  p42-langgraph-1.ipynb  p42-langgraph1.ipynb  p43-langgraph-2.ipynb  p44-snapshot.ipynb  p45-langgraph-studio.ipynb  p47-tool.ipynb  p5-构建第一个对话链.ipynb  p9-封装为网络服务.ipynb  prompt.txt  pyproject.toml
week04-homework/: .env.example  README.md  pyproject.toml
week04/app2/: .env.example  README.md  demo_tongyi_integration.py  pyproject.toml
week04/app2/src/agent/: __init__.py  config.py  graph.py  models.py  services.py
week04/app2/tests/: test_workflow.py
week04/code_assistant/: README.md  config.py  main.py  requirements.txt
week04/code_assistant/core/: models.py  nodes.py  utils.py
week04/p11/: ext_template.py  person_template_config.json  simple_demo.py
week04/p12/: custom_vllm_wrapper.py  requirements.txt  vllm_config.py  vllm_demo.py
week04/p23/: config.json  dashscope_demo_simple.py  dashscope_pipeline.py  requirements_dashscope.txt
week05/: .env.example  README.md  p11-2AgentChat.ipynb  p11-autogen.ipynb  p12-crewAI.ipynb  p13-Langgraph-MAS.ipynb  p20-mcp.ipynb  p23-mcp-fastapi.ipynb  p24-LangGraph-MCPClient.py  p24-LangGraph-MCPServer.py  p28-A2A-LangGraph.py  p28-A2A-LangGraph2.py  pyproject.toml
week05-homework/: README.md  pyproject.toml
(+33 files in other folders)
